Issue #5706 - fix potential NPE from websocket-core ServerUpgradeResponse
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>