@@ -21,7 +21,6 @@ package org.eclipse.jetty.websocket.core.server;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -48,15 +47,14 @@ public class ServerUpgradeResponse
     {
         if (HttpHeader.SEC_WEBSOCKET_SUBPROTOCOL.is(name))
         {
-            setAcceptedSubProtocol(value); // Can only be one, so set
+            setAcceptedSubProtocol(value);
             return;
         }
 
-        if (HttpHeader.SEC_WEBSOCKET_EXTENSIONS.is(name) && getExtensions() != null)
+        if (HttpHeader.SEC_WEBSOCKET_EXTENSIONS.is(name))
         {
-            // Move any extensions configs to the headers
-            response.addHeader(name, ExtensionConfig.toHeaderValue(getExtensions()));
-            setExtensions(null);
+            addExtensions(ExtensionConfig.parseList(value));
+            return;
         }
 
         response.addHeader(name, value);
@@ -64,7 +62,6 @@ public class ServerUpgradeResponse
 
     public void setHeader(String name, String value)
     {
-
         if (HttpHeader.SEC_WEBSOCKET_SUBPROTOCOL.is(name))
         {
             setAcceptedSubProtocol(value);
@@ -72,7 +69,10 @@ public class ServerUpgradeResponse
         }
 
         if (HttpHeader.SEC_WEBSOCKET_EXTENSIONS.is(name))
-            setExtensions(null);
+        {
+            setExtensions(ExtensionConfig.parseList(value));
+            return;
+        }
 
         response.setHeader(name, value);
     }
@@ -91,14 +91,21 @@ public class ServerUpgradeResponse
 
         if (HttpHeader.SEC_WEBSOCKET_EXTENSIONS.is(name))
         {
-            setExtensions(null);
-            response.setHeader(name, null);
-            values.forEach(value -> addHeader(name, value));
+            List<ExtensionConfig> extensions = Collections.emptyList();
+            if (values != null)
+            {
+                extensions = values.stream()
+                    .flatMap(s -> ExtensionConfig.parseList(s).stream())
+                    .collect(Collectors.toList());
+            }
+
+            setExtensions(extensions);
             return;
         }
 
-        response.setHeader(name, null); // clear it out first
-        values.forEach(value -> response.addHeader(name, value));
+        response.setHeader(name, null);
+        if (values != null)
+            values.forEach(value -> response.addHeader(name, value));
     }
 
     public String getAcceptedSubProtocol()
@@ -118,7 +125,7 @@ public class ServerUpgradeResponse
 
     public Set<String> getHeaderNames()
     {
-        return Collections.unmodifiableSet(new HashSet<>(response.getHeaderNames()));
+        return Set.copyOf(response.getHeaderNames());
     }
 
     public Map<String, List<String>> getHeadersMap()
@@ -130,7 +137,7 @@ public class ServerUpgradeResponse
 
     public List<String> getHeaders(String name)
     {
-        return Collections.unmodifiableList(new ArrayList<>(response.getHeaders(name)));
+        return List.copyOf(response.getHeaders(name));
     }
 
     public int getStatusCode()
@@ -157,6 +164,14 @@ public class ServerUpgradeResponse
     public void setAcceptedSubProtocol(String protocol)
     {
         negotiation.setSubprotocol(protocol);
+    }
+
+    public void addExtensions(List<ExtensionConfig> configs)
+    {
+        ArrayList<ExtensionConfig> combinedConfig = new ArrayList<>();
+        combinedConfig.addAll(getExtensions());
+        combinedConfig.addAll(configs);
+        setExtensions(combinedConfig);
     }
 
     public void setExtensions(List<ExtensionConfig> configs)
